# clinical_coder

./: .gitignore  README.md  pyproject.toml
scripts/: build_icd_db.py
src/: __init__.py
src/agents/: extractor.py  preprocessor.py  verifier.py
src/app/: config.py  main.py
src/llm/: backends.py
tests/fixtures/: note_001.txt
tests/unit/: test_extractor.py  test_preprocessor.py  test_verifier.py
